bobcat (3.19.01)
    
  * Fixed Process's d_closedByChild initialization (used by FreeBSD systems).

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 30 Dec 2013 11:17:50 +0100

bobcat (3.19.00)
    
  * Added Signal::remove, removing a previously added signal handling object.

  * Redesigned Process so that it (partially) uses the pimpl idiom. Also added
    the eoi manipulator and several new member functions.

  * Updated man-pages for Pipe, Redirector, Process, and Signal, 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 Dec 2013 11:16:20 +0100

bobcat (3.18.01)

  * Fixed a mismatch between SharedMemory::read's declared and defined return
    type.

  * Fixed erroneous #include directives in several Shared* class headers

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 22 Nov 2013 09:15:24 +0100

bobcat (3.18.00)

  * Added several new classes handling shared memory: ISharedStream,
    OSharedStream, SharedBlock, SharedMemory, SharedMutex, SharedPos,
    SharedSegment, SharedStream, and SharedStreambuf

  * Moved, where possible, nested struct/class  definitions not required in
    the public interface to the internal headers.

  * The nested class MailHeaders::const_hdr_iterator is used in the public
    interface: it is now declared in the public interface as well.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 18 Nov 2013 12:26:47 +0100

bobcat (3.17.00)

  * New split members added to the String class, removing the private split
    facility from Process, which are now superfluous, as they are covered by
    String's split facilities.

  * The class BigInt has received several new members and defines a type:
        - BigInt::Word, is equal to the OpenSSL BN_ULONG type, defining the
          unsigned long type that is used for storing BIGNUM values;
        - sizeOfWord() returning the size in bytes of a BigInt::Word;
        - nWords() returning the number of Words used by the current BigInt
          value;
          new at() member;