@@ -1,3 +1,3 @@
-VERSION=3.19.01
+VERSION=3.19.02
 YEARS=2005-2013
 
