@@ -2,6 +2,7 @@
 option
 option-value: \#x\\yz   \\
 option-value: #xyz
+option-value  without colon
 
 this line \
     continues over \
