@@ -1,3 +1,11 @@
+bobcat (3.19.02)
+    
+  * Fixed a bug in ArgConfig's option(string *dest, char const *key) due. Now
+    (conforming to ArgConfig's man-page) a key's trailing : in a configuration
+    file is ignored if key w/o : is passed as argument to this member.
+
+
+
 bobcat (3.19.01)
     
   * Fixed Process's d_closedByChild initialization (used by FreeBSD systems).
